kubernetes/network/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bangjeff-api-ingress
  namespace: bangjeff-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: api.bangjeff.id
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /v3/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
