kubernetes/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bangjeff-ingress
  namespace: bangjeff-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, Authorization, X-Requested-With"
    nginx.ingress.kubernetes.io/cors-expose-headers: "X-Requested-With"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Methods: GET, POST, PUT, DELETE, OPTIONS";
      more_set_headers "Access-Control-Allow-Headers: *";
spec:
  ingressClassName: nginx
  rules:
  - host: dev-api.bangjeff.com
    http:
      paths:
        - path: /auth(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 80
        - path: /backoffice(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 80
        - path: /v1/user(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 80
        - path: /v1/reseller(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 80
        - path: /admin(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: admin-service
              port:
                number: 80
        - path: /backoffice/admin(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: admin-service
              port:
                number: 80
        - path: /user(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 80
        - path: /backoffice/user(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 80
        - path: /reseller(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: reseller-service
              port:
                number: 80
        - path: /backoffice/reseller(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: reseller-service
              port:
                number: 80
        - path: /catalog(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: catalog-service
              port:
                number: 80
        - path: /backoffice/category(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: catalog-service
              port:
                number: 80
        - path: /backoffice/product(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: catalog-service
              port:
                number: 80
        - path: /backoffice/product-section(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: catalog-service
              port:
                number: 80
        - path: /backoffice/product-variant(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: catalog-service
              port:
                number: 80
        - path: /supplier(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: supplier-service
              port:
                number: 80
        - path: /backoffice/supplier(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: supplier-service
              port:
                number: 80
